--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -14,7 +14,7 @@
             <tr>
                 <th>Process Name</th>
                 <th>Area Name</th> 
-                <th>Duration (hours)</th>
+                <th>Duration (min)</th>
                 <th>Description</th>
                 <th class="text-end">Actions</th> 
             </tr>
