--- a/PMSCRM/Views/Task/EditTask.cshtml
+++ b/PMSCRM/Views/Task/EditTask.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <div class="mb-3">
-        <label for="Duration" class="form-label">Duration (in hours)</label>
+        <label for="Duration" class="form-label">Duration (min)</label>
         <input type="number" class="form-control" id="Duration" name="Duration" value="@Model.Duration" required>
         <div class="invalid-feedback">Please enter a valid duration.</div>
     </div>
