--- a/PMSCRM/Views/Process/DeleteProcess.cshtml
+++ b/PMSCRM/Views/Process/DeleteProcess.cshtml
@@ -10,7 +10,7 @@
 <div class="alert alert-danger">
     <h4>Are you sure you want to delete this process?</h4>
     <p><strong>Process Name:</strong> @Model.Name</p>
-    <p><strong>Duration:</strong> @Model.Duration hours</p>
+    <p><strong>Duration:</strong> @Model.Duration min</p>
     <p><strong>Description:</strong> @(string.IsNullOrEmpty(Model.Description) ? "No description available." : Model.Description)</p>
 </div>
 
