--- a/PMSCRM/Views/Task/DeleteTask.cshtml
+++ b/PMSCRM/Views/Task/DeleteTask.cshtml
@@ -10,7 +10,7 @@
 <div class="alert alert-danger">
     <h4>Are you sure you want to delete this task?</h4>
     <p><strong>Task Name:</strong> @Model.Name</p>
-    <p><strong>Duration:</strong> @Model.Duration hours</p>
+    <p><strong>Duration:</strong> @Model.Duration min</p>
     <p><strong>Description:</strong> @Model.Description</p>
 </div>
 
