--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/AddTaskProcessAreaUserCustomer.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/AddTaskProcessAreaUserCustomer.cshtml
@@ -39,14 +39,14 @@
         <div class="mb-3">
             <label for="UserId" class="form-label">Select User</label>
             <select asp-for="UserId" asp-items="Model.Users" class="form-select" required>
-                <option value="">Choose a user...</option>
+                <option value="">...</option>
             </select>
         </div>
 
         <div class="mb-3">
             <label for="CustomerId" class="form-label">Select Customer</label>
             <select asp-for="CustomerId" asp-items="Model.Customers" class="form-select" required>
-                <option value="">Choose a customer...</option>
+                <option value="">...</option>
             </select>
         </div>
 
@@ -63,7 +63,7 @@
         <div class="mb-3">
             <label for="Status" class="form-label">Status</label>
             <select asp-for="Status" asp-items="Model.Statuses" class="form-select" required>
-                <option value="">Choose a status...</option>
+                <option value="">...</option>
             </select>
         </div>
 
